remove unused files

--- a/src/app/main/components/menu/menu.component.html
+++ b/src/app/main/components/menu/menu.component.html
@@ -1,10 +1,10 @@
 <p-menubar [model]="items">
 
-  <p-selectButton [options]="themes" (onChange)="switchTheme($event)" [(ngModel)]="selectedTheme" optionLabel="mode" optionValue="mode">
+  <p-selectButton [options]="themes" (onChange)="switchTheme($event)" [(ngModel)]="selectedTheme" optionLabel="label" optionValue="label">
     <ng-template let-item>
 
       <i aria-hidden="true" [class]="item.icon"></i>
-     <span class="ml-1"> {{item.mode | titlecase}}</span>
+     <span class="ml-1"> {{item.label | titlecase}}</span>
     </ng-template>
   </p-selectButton>
 
