--- a/src/app/main/components/table/table.component.html
+++ b/src/app/main/components/table/table.component.html
@@ -24,8 +24,7 @@
            [rows]="10" [showCurrentPageReport]="true"
            [rowsPerPageOptions]="[10,25,50]" [loading]="loading"
            styleClass="p-datatable-gridlines"
-           [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-           [globalFilterFields]="['code','currency','mid']">
+           [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
     <ng-template pTemplate="caption">
       <div class="flex justify-content-between">
        <div>
