--- a/src/app/main/components/table/table.component.html
+++ b/src/app/main/components/table/table.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="position-relative">
+<div>
   <div *ngIf="preview" class="preview-card" @fade>
 
     <p-card  header="Welcome" [style]="{'width': '25rem', 'margin-bottom': '2em'}">
